re PR target/15869 (No NOP after LW (with -mips1 -O0))

PR target/15869
	* config/mips/mips.c (mips_avoid_hazards): Call split_all_insns_noflow.

From-SVN: r83516